update userAdapter to you changeset processor